# pksuid

./: Cargo.toml  Makefile.toml  README.md  debug-schema.sql  prefixed_ksuid.control  prefixed_ksuid_pgrx.control
.cargo/: config.toml
pksuid/: Cargo.toml
pksuid-example/: .env  Cargo.toml
pksuid-example/migrations/: 20231226054343_init.up.sql
pksuid-example/src/: main.rs
pksuid-extension/: Cargo.toml  pksuid.control
pksuid-extension/src/: lib.rs
pksuid/src/: lib.rs  pgrx_impl.rs  serde.rs  sqlx.rs
src/: error.rs  lib.rs  pksuid.rs  sqlx.rs
