[workspace]
members = ["pksuid*"]
resolver = "2"

[workspace.package]
edition = "2021"
homepage = "https://github.com/fyko/merriam-webster"
repository = "https://github.com/fyko/merriam-webster"
categories = ["api-bindings", "asynchronous", "web-programming::http-client"]
keywords = ["merriam", "webster", "dictionary"]
license = "MIT OR Apache-2.0"
authors = ["Carter Himmel <carter@fyko.net>"]

[workspace.dependencies]
pksuid = { path = "./pksuid", version = "0.0.1" }
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio-rustls"] }
pgrx = "0.11.2"
svix-ksuid = { version = "0.7.0", features = ["serde"] }
serde = "1.0.193"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
