[package]
name = "pksuid-example"
version = "0.1.0"
edition.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
sqlx.workspace = true
pksuid = { workspace = true, features = ["sqlx"] }
