[package]
name = "pksuid-extension"
version = "0.1.0"
edition = "2021"
authors = ["Carter Himmel <carter@sycer.tech>"]
license = "MIT or Apache-2.0"
description = "A PostgreSQL extension for generating Prefixed KSUIDs."
rust-version = "1.77.0"

[lib]
crate-type = ["cdylib"]
name = "pksuid"

[badges]
maintenance = { status = "actively-maintained" }

[dependencies]
pgrx.workspace = true
pksuid = { workspace = true, version = "0.1.0" }

[features]
default = ["pg16"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dev-dependencies]
pgrx-tests = "0.11.2"
