[package]
name = "pksuid"
version = "0.0.1"
edition = "2021"
authors = ["Carter Himmel <carter@sycer.tech>"]
license = "MIT or Apache-2.0"
description = "A PostgreSQL extension for generating Prefixed KSUIDs."
rust-version = "1.77.0"

[badges]
maintenance = { status = "actively-maintained" }

[dependencies]
pgrx = { workspace = true, optional = true }
svix-ksuid.workspace = true
serde.workspace = true
sqlx = { workspace = true, optional = true }

[features]
default = ["pg16", "sqlx"]
sqlx = ["dep:sqlx"]
__pg = []
pg11 = ["__pg", "pgrx/pg11", "pgrx-tests/pg11"]
pg12 = ["__pg", "pgrx/pg12", "pgrx-tests/pg12"]
pg13 = ["__pg", "pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["__pg", "pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["__pg", "pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["__pg", "pgrx/pg16", "pgrx-tests/pg16"]
pg_test = []

[dev-dependencies]
pgrx-tests = "0.11.2"
